--- a/Module_1_Basic_Visualization_Tools.ipynb
+++ b/Module_1_Basic_Visualization_Tools.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMIXs+UioBzvECEef/pz3/a",
+      "authorship_tag": "ABX9TyOKKLIFMHHaFNAgHlSh6CcY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,7 +60,7 @@
         "Para abrir R no Google Colab basta usar o código:\n",
         "https://colab.research.google.com/#create=true&language=r\n",
         "\n",
-        "caso queira ver a apostila desse módulo no curso da IBM tem o link:\n",
+        "Caso queira ver a apostila desse módulo no curso da IBM tem o link:\n",
         "https://labs.cognitiveclass.ai/v2/tools/jupyterlab?ulid=ulid-8110c9866fad704e8c306cbc78a09aca90d1a2a5\n",
         "'"
       ],
@@ -74,8 +74,8 @@
         "#####\n",
         "## Base de dados do projeto\n",
         "'\n",
-        "mtcars <- Conjunto de dados integrado ao R que \n",
-        "contÃ©m dados da revista Motor Trend US de 1974.'\n",
+        "mtcars <- Conjunto de dados integrado ao R \n",
+        "da revista Motor Trend US de 1974.'\n",
         "\n",
         "# puxando a database\n",
         "mtcars\n"
@@ -86,20 +86,20 @@
           "height": 1000
         },
         "id": "LEMvwV3mae-6",
-        "outputId": "59adaeec-fd32-4db8-b3a8-7ddd16ed4b78"
+        "outputId": "fcd782ba-a169-48ff-b64c-8802b54a4094"
       },
-      "execution_count": 10,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
-              "'\\nmtcars &lt;- Conjunto de dados integrado ao R que \\ncontÃ©m dados da revista Motor Trend US de 1974.'"
+              "'\\nmtcars &lt;- Conjunto de dados integrado ao R \\nda revista Motor Trend US de 1974.'"
             ],
-            "text/markdown": "'\\nmtcars &lt;- Conjunto de dados integrado ao R que \\ncontÃ©m dados da revista Motor Trend US de 1974.'",
-            "text/latex": "'\\textbackslash{}nmtcars <- Conjunto de dados integrado ao R que \\textbackslash{}ncontÃ©m dados da revista Motor Trend US de 1974.'",
+            "text/markdown": "'\\nmtcars &lt;- Conjunto de dados integrado ao R \\nda revista Motor Trend US de 1974.'",
+            "text/latex": "'\\textbackslash{}nmtcars <- Conjunto de dados integrado ao R \\textbackslash{}nda revista Motor Trend US de 1974.'",
             "text/plain": [
-              "[1] \"\\nmtcars <- Conjunto de dados integrado ao R que \\ncontÃ©m dados da revista Motor Trend US de 1974.\""
+              "[1] \"\\nmtcars <- Conjunto de dados integrado ao R \\nda revista Motor Trend US de 1974.\""
             ]
           },
           "metadata": {}
@@ -201,12 +201,12 @@
         "###Lembrando que dados podem ter dois tipos:\n",
         "Dados qualitativos <- descrevem alguma qualidade, atributo  ou \n",
         "categoria. </br>\n",
-        "Ex: Nesse conjunto de dados, Ã© o nome de um automÃ³vel.\n",
+        "Ex: Nesse conjunto de dados, é o nome de um automóvel.\n",
         "<br></br>\n",
         "Dados quantitativos <- São medidos e descritos numericamente.\n",
         "Ex: pressão, quilometragem e peso.\n",
         "<br></br>\n",
-        "Obs: algumas variÃvariáveis aparentimente quantitativas podem ser \n",
+        "Obs: algumas variáveis aparentimente quantitativas podem ser \n",
         "interpretadas qualitativas dependendo do contexto."
       ],
       "metadata": {
@@ -216,7 +216,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# exemplo de grÃ¡fico de barras com qplot()\n",
+        "'exemplo de gráfic de barras com qplot()'\n",
         "qplot(mtcars$cyl,    # dataset\n",
         "      geom = \"bar\",    # definindo grafico em barra\n",
         "      fill = I(\"blue\"),    # preenchimento azul\n",
@@ -228,13 +228,27 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 437
+          "height": 454
         },
         "id": "UDYUY3PGally",
-        "outputId": "e6638b18-6d1a-4abb-c8d8-42983d8dfe80"
+        "outputId": "bf77cee8-e716-4682-b360-b070f48ed4c4"
       },
-      "execution_count": 11,
+      "execution_count": 28,
       "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "'exemplo de gráfic de barras com qplot()'"
+            ],
+            "text/markdown": "'exemplo de gráfic de barras com qplot()'",
+            "text/latex": "'exemplo de gráfic de barras com qplot()'",
+            "text/plain": [
+              "[1] \"exemplo de gráfic de barras com qplot()\""
+            ]
+          },
+          "metadata": {}
+        },
         {
           "output_type": "display_data",
           "data": {
@@ -265,7 +279,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# histograma simples\n",
+        "'histograma simples'\n",
         "qplot(\n",
         "  mtcars$hp,\n",
         "  geom = \"histogram\"\n",
@@ -274,13 +288,27 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 454
+          "height": 472
         },
         "id": "0BQJrY0PbJmO",
-        "outputId": "3b82626a-0730-4bb7-f5b0-2605d3524aa2"
+        "outputId": "97e89c07-bd91-4584-dc8f-e37e6edc9d97"
       },
-      "execution_count": 12,
+      "execution_count": 29,
       "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "'histograma simples'"
+            ],
+            "text/markdown": "'histograma simples'",
+            "text/latex": "'histograma simples'",
+            "text/plain": [
+              "[1] \"histograma simples\""
+            ]
+          },
+          "metadata": {}
+        },
         {
           "output_type": "stream",
           "name": "stderr",
@@ -322,9 +350,9 @@
           "height": 454
         },
         "id": "LNCtQHw07Elh",
-        "outputId": "ac3ccbcb-0bb1-4f61-990b-80e8aec7f076"
+        "outputId": "44ef4e33-e947-4d31-a7a0-e5270e860396"
       },
-      "execution_count": 13,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "display_data",
@@ -375,9 +403,9 @@
           "height": 454
         },
         "id": "px0yoJX67Lo9",
-        "outputId": "4ed4e972-9505-423f-9ec3-9a454dab77a9"
+        "outputId": "7723e02f-4d48-4b66-ef7b-6ab165da4a89"
       },
-      "execution_count": 14,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "display_data",
@@ -414,7 +442,7 @@
       "cell_type": "code",
       "source": [
         "# histograma simpmles \n",
-        "'também podemos mudar o range que queremso visualizar'\n",
+        "'também podemos mudar o range que queremos visualizar'\n",
         "qplot(\n",
         "  mtcars$hp,\n",
         "  geom = \"histogram\",\n",
@@ -429,20 +457,20 @@
           "height": 524
         },
         "id": "xdS_ceDH7USP",
-        "outputId": "e4f2486b-822c-44c9-ee93-a4c207f9fdb5"
+        "outputId": "fc59626c-6bc3-4b7a-c08d-8a53ae441456"
       },
-      "execution_count": 17,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
-              "'também podemos mudar o range que queremso visualizar'"
+              "'também podemos mudar o range que queremos visualizar'"
             ],
-            "text/markdown": "'também podemos mudar o range que queremso visualizar'",
-            "text/latex": "'também podemos mudar o range que queremso visualizar'",
+            "text/markdown": "'também podemos mudar o range que queremos visualizar'",
+            "text/latex": "'também podemos mudar o range que queremos visualizar'",
             "text/plain": [
-              "[1] \"também podemos mudar o range que queremso visualizar\""
+              "[1] \"também podemos mudar o range que queremos visualizar\""
             ]
           },
           "metadata": {}
@@ -478,7 +506,7 @@
       "cell_type": "code",
       "source": [
         "# histograma simpmles \n",
-        "'mudar o nome dos eixos'\n",
+        "'mudar os nomes dos eixos'\n",
         "qplot(\n",
         "  mtcars$hp,\n",
         "  geom = \"histogram\",\n",
@@ -494,20 +522,20 @@
           "height": 454
         },
         "id": "3bbcnku37e7q",
-        "outputId": "8784c34f-d53c-45ba-8cdd-d4be15aaaa6e"
+        "outputId": "f5aacaaf-d62d-4a6c-9e59-a420d1c77c7a"
       },
-      "execution_count": 18,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
-              "'mudar o nome dos eixos'"
+              "'mudar os nomes dos eixos'"
             ],
-            "text/markdown": "'mudar o nome dos eixos'",
-            "text/latex": "'mudar o nome dos eixos'",
+            "text/markdown": "'mudar os nomes dos eixos'",
+            "text/latex": "'mudar os nomes dos eixos'",
             "text/plain": [
-              "[1] \"mudar o nome dos eixos\""
+              "[1] \"mudar os nomes dos eixos\""
             ]
           },
           "metadata": {}
@@ -552,9 +580,9 @@
           "height": 506
         },
         "id": "2GgxVlc27jiF",
-        "outputId": "54782d2b-f673-408c-9d1b-bed931fd500c"
+        "outputId": "6aa1a9b6-0005-4246-d3dc-e3619b8262e7"
       },
-      "execution_count": 19,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "display_data",
@@ -618,9 +646,9 @@
           "height": 506
         },
         "id": "ERiLz_vS7oV9",
-        "outputId": "f7420ab3-cb6c-44e9-d5d5-767b6b4d4876"
+        "outputId": "7e6e73b7-3ac7-4623-f352-feacd4052a22"
       },
-      "execution_count": 20,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "display_data",
@@ -675,8 +703,7 @@
     {
       "cell_type": "code",
       "source": [
-        "'\n",
-        "primeiro vamos fazer um gráfico em barras empilhadas'\n",
+        "'primeiro vamos fazer um gráfico em barras empilhadas'\n",
         "bar <- ggplot(mtcars,\n",
         "              aes(x=1, y=sort(mtcars$carb),fill = sort(mtcars$carb))\n",
         "              ) + geom_bar(stat=\"identity\")\n",
@@ -688,20 +715,20 @@
           "height": 454
         },
         "id": "QBBzK9JzbVW2",
-        "outputId": "33a39422-aa60-40c1-b1c0-92940f6771a3"
+        "outputId": "b0699a57-2a6a-46ec-a1b4-9c7c7b6ea9fc"
       },
-      "execution_count": 21,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
-              "'\\nprimeiro vamos fazer um gráfico em barras empilhadas'"
+              "'primeiro vamos fazer um gráfico em barras empilhadas'"
             ],
-            "text/markdown": "'\\nprimeiro vamos fazer um gráfico em barras empilhadas'",
-            "text/latex": "'\\textbackslash{}nprimeiro vamos fazer um gráfico em barras empilhadas'",
+            "text/markdown": "'primeiro vamos fazer um gráfico em barras empilhadas'",
+            "text/latex": "'primeiro vamos fazer um gráfico em barras empilhadas'",
             "text/plain": [
-              "[1] \"\\nprimeiro vamos fazer um gráfico em barras empilhadas\""
+              "[1] \"primeiro vamos fazer um gráfico em barras empilhadas\""
             ]
           },
           "metadata": {}
@@ -737,9 +764,9 @@
           "height": 454
         },
         "id": "87veaWK08M2V",
-        "outputId": "fca276e4-01af-42d4-9758-d70cc0f64181"
+        "outputId": "9eed0b6b-ded6-41f5-eee4-eb8de9d405fe"
       },
-      "execution_count": 25,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "display_data",
@@ -793,9 +820,9 @@
           "height": 437
         },
         "id": "CHFXBDQ_7yD0",
-        "outputId": "e208e4c0-4cd7-4925-b784-9549aeeb88f5"
+        "outputId": "ecff9599-e6af-46bc-e3ac-82154a3c8d42"
       },
-      "execution_count": 23,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "display_data",
